--- a/style.css
+++ b/style.css
@@ -1,23 +1,100 @@
+/* Reset de estilos básicos */
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
-.container{
+
+body {
+    font-family: Arial, sans-serif;
+    overflow: hidden;
+    background-color: #000;
+}
+
+header {
+    text-align: center;
+    padding: 5px;
+    height: 50px;
+    position: fixed;
+    top: 0;
     width: 100%;
-    height: 100vh;
-    background-image: url(img/splash.jpg);
-    background-size: cover;
-}
-.navbar{
-    height: 12%;
+    z-index: 1000;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.logo{
-    width: 50px;
-}
-.menu-icon{
+
+header img {
     width: 30px;
+    height: auto;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+#image-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+    z-index: -1;
+}
+
+#form-container {
+    background-color: #000;
+    padding: 40px;
+    border-radius: 10px;
+    position: fixed;
+    bottom: 8%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 999;
+    max-width: 500px;
+    min-width: 40;
+    width: 70%;
+    min-height: 200px;
+}
+
+form {
+    text-align: center;
+    color: #fff;
+    font-family: 'Teko', sans-serif;
+    font-size: max(20px, 2vmin);
+    font-weight: 100;
+    letter-spacing: 1px;
+}
+
+input[type="email"] {
+    padding: 8px;
+    width: 100%;
+    font-size: 22px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    font-family: 'Teko', sans-serif;
+}
+
+button {
+    padding: 8px 40px;
+    border-radius: 8px;
+    font-size: 22px;
+    background-color: #fffc00;
+    color: #201829;
+    border: none;
     cursor: pointer;
+    transition: background-color 0.3s;
+    font-family: 'Teko', sans-serif;
+}
+
+button:hover {
+    background-color: #FF8C00;
+}
+
+#thankYouMessage {
+    display: none;
+    margin-top: 10px;
 }
