--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@
 input[type="text"]:focus {
     color: #272121; /* Cambiar a negro u otro color deseado */
 }
+
+#thankYouMessage {
+    display: none;
+    margin-top: 10px;
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 20px;
+    color: #818181;
+}
